--- a/ThirtyFour.csproj
+++ b/ThirtyFour.csproj
@@ -47,11 +47,13 @@
   <ItemGroup>
     <Compile Include="Anagram.cs" />
     <Compile Include="AnagramTests.cs" />
+    <Compile Include="ClosedQuotes.cs" />
     <Compile Include="NumericRanges.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="NumericRangeTests.cs" />
     <Compile Include="RepeatedString.cs" />
     <Compile Include="RepeatedStringTests.cs" />
+    <Compile Include="ClosedQuotesTests.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
